--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<% @books.each do |book| %>
+<div>
+  <p><%= image_tag 'no_image.jpg' %></p>
+  <p><%= book.title %></p>
+  <p><%= book.body %></p>
+
+</div>
+<% end %>
