--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h2>User info</h2>
+  <%= form_with model:@user do |f| %>
+   <label for="user_name">Name</label>
+    <%= f.text_field:name,autofocus: true,id:"user_name",placeholder:"name" %>
+   <label for="user_image">Image</label>
+    <%= f.file_field :profile_image,placeholder:"プロフィール画像",accept:"image/*" %>
+   <label for="user_introduction">Introduction</label>
+
+    <%= f.submit "Update User" %>
+  <% end %>
