--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <% @books.each do |book| %>
 <div>
-  <%= link_to @book.user_path(user.id) do %>
+  <%= link_to @user_path(@user.id) do %>
    <p><%= image_tag book.user.get_profile_image(100,100) %></p>
    <p>
      <%= link_to book_path(book.id) do %>
