--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
 <div>
   <h3><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
-  <p><%= link_to "編集",edit_user_path(@user) %></p>
+  <% if @user == current_user %>
+   <p><%= link_to "編集",edit_user_path(@user) %></p>
+  <% end %>
 </div>
 
 <% @books.each do |book| %>
@@ -14,3 +16,4 @@
   <%= book.body %>
 
 </div>
+<% end %>
