--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,13 +1,15 @@
 <% @books.each do |book| %>
 <div>
-  <%= link_to @user_path(@user.id) do %>
-   <p><%= image_tag book.user.get_profile_image(100,100) %></p>
+   <p>
+    <%= link_to user_path(book.user.id) do %>
+     <%= image_tag book.user.get_profile_image(100,100) %>
+    <% end %>
+   </p>
    <p>
      <%= link_to book_path(book.id) do %>
       <%= book.title %>
      <% end %>
    </p>
    <p><%= book.body %></p>
-  <% end %>
 </div>
 <% end %>
