--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Bookers2</title>
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,35 +13,50 @@
 
   <body>
     <header>
-
-      <%if user_signed_in? %>
-       <li>
-         <%= link_to "Home",user_path(current_user.id) %>
-       </li>
-       <li>
-         <%= link_to "Users",users_path %>
-       </li>
-       <li>
-         <%= link_to "Books",books_path %>
-       </li>
-       <li>
-         <%= link_to "Log out",destroy_user_session_path,method: :delete %>
-       </li>
-      <% else %>
-       <li>
-         <%= link_to "Home",user_path(current_user.id) %>
-       </li>
-       <li>
-         <%= link_to "About",about_path %>
-       </li>
-       <li>
-         <%= link_to "Sign up",new_user_registrateion_path %>
-       </li>
-       <li>
-         <%= link_to "Log in",new_user_session_path %>
-       </li>
-      <% end %>
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <span>Bookers</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+            <%if user_signed_in? %>
+             <li class="nav-item">
+               <%= link_to "Home",user_path(current_user.id) %>
+             </li>
+             <li class="nav-item">
+               <%= link_to "Users",users_path %>
+             </li>
+             <li class="nav-item">
+               <%= link_to "Books",books_path %>
+             </li>
+             <li class="nav-item">
+               <%= link_to "Log out",destroy_user_session_path,method: :delete %>
+             </li>
+            <% else %>
+             <li class="nav-item">
+               <%= link_to "Home",user_path(current_user.id) %>
+             </li>
+             <li class="nav-item">
+               <%= link_to "About",about_path %>
+             </li>
+             <li class="nav-item">
+               <%= link_to "Sign up",new_user_registrateion_path %>
+             </li>
+             <li class="nav-item">
+               <%= link_to "Log in",new_user_session_path %>
+             </li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+     </nav>
     </header>
-    <%= yield %>
+    <main class="mb-auto">
+      <%= yield %>
+    </main>
   </body>
 </html>
