--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,29 +25,45 @@
           <ul class="navbar-nav ml-auto">
             <%if user_signed_in? %>
              <li class="nav-item">
-               <%= link_to "Home",user_path(current_user.id) %>
+               <%= link_to user_path(current_user.id),class:'nav-link text-light' do %>
+                 <i class="fas fa-home"></i><%= " Home" %>
+               <% end %>
              </li>
              <li class="nav-item">
-               <%= link_to "Users",users_path %>
+               <%= link_to users_path,class:'nav-link text-light' do %>
+                 <i class="fas fa-users"></i><%= " Users" %>
+               <% end %>
              </li>
              <li class="nav-item">
-               <%= link_to "Books",books_path %>
+               <%= link_to books_path,class:'nav-link text-light' do %>
+                 <i class="fas fa-book-open"></i><%= " Books" %>
+               <% end %>
              </li>
              <li class="nav-item">
-               <%= link_to "Log out",destroy_user_session_path,method: :delete %>
+               <%= link_to destroy_user_session_path,method: :delete,class:'nav-link text-light' do %>
+                 <i class="fas fa-sign-out-alt"></i><%= " Log out" %>
+               <% end %>
              </li>
             <% else %>
              <li class="nav-item">
-               <%= link_to "Home",user_path(current_user.id) %>
+               <%= link_to "/",class:'nav-link text-light' do %>
+                 <i class="fas fa-home"></i><%= " Home" %>
+               <% end %>
              </li>
              <li class="nav-item">
-               <%= link_to "About",about_path %>
+               <%= link_to about_path,class:'nav-link text-light' do %>
+                 <i class="fas fa-link"></i><%= " About" %>
+               <% end %>
              </li>
              <li class="nav-item">
-               <%= link_to "Sign up",new_user_registrateion_path %>
+               <%= link_to new_user_registration_path,class:'nav-link text-light' do %>
+                 <i class="fas fa-user-plus"></i><%= " Sign up" %>
+               <% end %>
              </li>
              <li class="nav-item">
-               <%= link_to "Log in",new_user_session_path %>
+               <%= link_to new_user_session_path,class:'nav-link text-light' do %>
+               <i class="fas fa-sign-in-alt"></i><%= "Log in" %>
+               <% end %>
              </li>
             <% end %>
           </ul>
@@ -55,8 +71,17 @@
       </div>
      </nav>
     </header>
-    <main class="mb-auto">
+    <main>
       <%= yield %>
     </main>
+    <footer>
+      <idv class="container mt-5">
+        <div class="d-flex flex-row">
+          <div class="mx-auto">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </idv>
+    </footer>
   </body>
 </html>
