--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,38 @@
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class="table">
+        <tbody>
+          <tr></tr>
+          <tr>
+            <th>name</th>
+            <th><%= @user.name %></th>
+          </tr>
+            <th>introduction</th>
+            <th></th>
+        </tbody>
+      </table>
+      <div class="row">
+        <% if @user == current_user %>
+         <%= link_to edit_user_path(@user),class:'btn btn-outline-secondary btn-block' do  %>
+           <i class="fas fa-user-cog"></i>
+         <% end %>
+        <% end %>
+      </div>
+      <h2 class="mt-3">New book</h2>
 
-<div>
-  <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <% if @user == current_user %>
-   <p><%= link_to "編集",edit_user_path(@user) %></p>
-  <% end %>
+    </div>
+
+    <% @books.each do |book| %>
+      <div>
+      <%= image_tag book.user.get_profile_image(100,100) %>
+      <%= link_to book_path(book.id) do %>
+       <%= book.title %>
+      <% end %>
+      <%= book.body %>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-<% @books.each do |book| %>
-<div>
-  <%= image_tag book.user.get_profile_image(100,100) %>
-  <%= link_to book_path(book.id) do %>
-   <%= book.title %>
-  <% end %>
-  <%= book.body %>
-
-</div>
-<% end %>
