--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,38 +1,37 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100,100) %>
-      <table class="table">
-        <tbody>
-          <tr></tr>
-          <tr>
-            <th>name</th>
-            <th><%= @user.name %></th>
-          </tr>
-            <th>introduction</th>
-            <th></th>
-        </tbody>
-      </table>
-      <div class="row">
-        <% if @user == current_user %>
-         <%= link_to edit_user_path(@user),class:'btn btn-outline-secondary btn-block' do  %>
-           <i class="fas fa-user-cog"></i>
-         <% end %>
-        <% end %>
-      </div>
-      <h2 class="mt-3">New book</h2>
-
+    <%= render 'books/list' %>
+    <div class="col-md-8 offset-md-1">
+      <h2>Book</h2>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+              <tr>
+                <td>
+                  <%= link_to user_path(book.user.id) do %>
+                    <%= image_tag book.user.get_profile_image(100,100) %>
+                  <% end %>
+                </td>
+                <td>
+                  <%= link_to book_path(book.id) do %>
+                   <%= book.title %>
+                  <% end %>
+                </td>
+                <td>
+                  <%= book.body %>
+                </td>
+              </tr>
+              <% end %>
+          </tbody>
+        </table>
     </div>
-
-    <% @books.each do |book| %>
-      <div>
-      <%= image_tag book.user.get_profile_image(100,100) %>
-      <%= link_to book_path(book.id) do %>
-       <%= book.title %>
-      <% end %>
-      <%= book.body %>
-      </div>
-    <% end %>
   </div>
 </div>
