--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,20 +1,20 @@
   <div class="col-md-3">
     <h2>User info</h2>
-    <%= image_tag @user.get_profile_image(100,100) %>
+    <%= image_tag current_user.get_profile_image(100,100) %>
     <table class="table">
       <tbody>
         <tr></tr>
         <tr>
           <th>name</th>
-          <th><%= @user.name %></th>
+          <th><%= current_user.name %></th>
         </tr>
           <th>introduction</th>
           <th></th>
       </tbody>
     </table>
     <div class="row">
-      <% if @user == current_user %>
-       <%= link_to edit_user_path(@user),class:'btn btn-outline-secondary btn-block' do  %>
+      <% if user == current_user %>
+       <%= link_to edit_user_path(user),class:'btn btn-outline-secondary btn-block' do  %>
          <i class="fas fa-user-cog"></i>
        <% end %>
       <% end %>
