--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,35 @@
-<% @books.each do |book| %>
-<div>
-   <p>
-    <%= link_to user_path(book.user.id) do %>
-     <%= image_tag book.user.get_profile_image(100,100) %>
-    <% end %>
-   </p>
-   <p>
-     <%= link_to book_path(book.id) do %>
-      <%= book.title %>
-     <% end %>
-   </p>
-   <p><%= book.body %></p>
+<div class="container px-5 px-smm-0">
+ <div class="row">
+    <%= render 'list',user:@user %>
+    <div class="col-md-8 offset-md-1">
+      <h2>Book</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+           <tr>
+             <td>
+              <%= link_to user_path(book.user.id) do %>
+               <%= image_tag book.user.get_profile_image(100,100) %>
+              <% end %>
+             </td>
+             <td>
+               <%= link_to book_path(book.id) do %>
+                <%= book.title %>
+               <% end %>
+             </td>
+             <td><%= book.body %></td>
+           </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+ </div>
 </div>
-<% end %>
