--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,10 @@
-<h2>about </h2>
+<div class="container">
+  <div class="row">
+    <h1 class="px-3 mx-auto">
+      welcome to
+      <i class="fas fa-book"></i>
+      <strong>Bookers</strong>
+     !
+    </h1>
+  </div>
+</div>
