--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,12 +1,12 @@
   <div class="col-md-3">
     <h2>User info</h2>
-    <%= image_tag current_user.get_profile_image(100,100) %>
+    <%= image_tag user.get_profile_image(100,100) %>
     <table class="table">
       <tbody>
         <tr></tr>
         <tr>
           <th>name</th>
-          <th><%= current_user.name %></th>
+          <th><%= user.name %></th>
         </tr>
           <th>introduction</th>
           <th></th>
