--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,19 @@
-<div>
-  <p>
-    <%= link_to user_path(@book.user.id) do %>
-     <%= image_tag @book.user.get_profile_image(100,100) %>
-     <%= @book.user.name %>
+<div class="container px-5 px-smm-0">
+ <div class="row">
+  <%= render 'books/list',user:@user %>
+  <div>
+    <p>
+     <%= link_to user_path(@book_show.user.id) do %>
+      <%= image_tag @book_show.user.get_profile_image(100,100) %>
+      <%= @book_show.user.name %>
+     <% end %>
+    </p>
+    <p>title:<%= @book_show.title %></p>
+    <p>setumei:<%= @book_show.body %></p>
+    <p>day:<%= @book_show.created_at.strftime('%Y/%m/%d') %></p>
+    <% if @book_show.user == current_user %>
+     <%= link_to "Destroy",book_path(@book_show),method: :delete %>
     <% end %>
-  </p>
-  <p>title:<%= @book.title %></p>
-  <p>setumei:<%= @book.body %></p>
-  <p>day:<%= @book.created_at.strftime('%Y/%m/%d') %></p>
-  <% if @book.user == current_user %>
-   <%= link_to "Destroy",book_path(@book),method: :delete %>
-  <% end %>
+  </div>
+ </div>
 </div>
