introductionテーブル追加

--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -9,7 +9,7 @@
           <th><%= user.name %></th>
         </tr>
           <th>introduction</th>
-          <th></th>
+          <th><%= user.introduction %></th>
       </tbody>
     </table>
     <div class="row">
