--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,11 +20,14 @@
       <td>
        <%= @book_show.body %>
       </td>
+      <% if @book_show.user == current_user %>
       <td>
-       <% if @book_show.user == current_user %>
-        <%= link_to "Destroy",book_path(@book_show),method: :delete %>
-       <% end %>
+       <%= link_to "Edit",edit_book_path(@book_show.id),class:"btn btn-sm btn-success" %>
       </td>
+      <td>
+       <%=link_to 'Destroy',book_path(@book_show.id),method: :delete,"data-confirm"=>"本当に消しますか?" ,class:"btn btn-sm btn-danger"%>
+      </td>
+      <% end %>
      </tr>
     </tbody>
    </table>
