--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,18 @@
+<% if flash[:notice] %>
+  <p id="notice"><%= flash[:notice] %></p>
+<%end%>
+
 <div class="container">
+ <% if @book.errors.any? %>
+  <div id="error">
+   <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+   <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+   </ul>
+  </div>
+ <% end %>
  <div class="row">
   <%= render 'books/list',user:@user %>
   <div class="col-md-8 offset-md-1">
