--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,15 +5,15 @@
    <%= form_with model:@user do |f| %>
     <div class="form-group">
      <label for="user_name">Name</label>
-     <%= f.text_field:name,autofocus: true,id:"user_name",placeholder:"name",class:"form-control" %>
+     <%= f.text_field:name, class: "form-control" %>
     </div>
     <div class="form-group">
      <label for="user_image">Image</label>
-     <%= f.file_field :profile_image,placeholder:"プロフィール画像",accept:"image/*",class:"form-control-file" %>
+     <%= f.file_field :profile_image,accept:"image/*", class: "form-control" %>
     </div>
     <div class="form-group">
      <label for="user_introduction">Introduction</label>
-     <%= f.text_area :introduction,autofocus :true,class:"form-control" %>
+     <%= f.text_area :introduction, class: "form-control" %>
     </div>
     <div class="form-group">
      <%= f.submit "Update User",class:"btn btn-secondary" %>
